--- a/STYLYST FB/Views/My Businesses/AssignServicesTableViewCell.xib
+++ b/STYLYST FB/Views/My Businesses/AssignServicesTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18092"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -27,13 +27,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Haircut" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6iJ-ek-hdR">
-                        <rect key="frame" x="20" y="8.5" width="90" height="33"/>
+                        <rect key="frame" x="20" y="8" width="95" height="34"/>
                         <fontDescription key="fontDescription" name="GlacialIndifference-Bold" family="Glacial Indifference" pointSize="28"/>
                         <color key="textColor" name="GoldenThemeColorDefault"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="WY6-O8-wms">
-                        <rect key="frame" x="291" y="12" width="30" height="26.5"/>
+                        <rect key="frame" x="295" y="12" width="30" height="26.5"/>
                         <color key="tintColor" name="GoldenThemeColorInverse"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="IOU-YM-nF5"/>
@@ -41,19 +41,21 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to assign" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Rx-yJ-h9f">
-                        <rect key="frame" x="247" y="14" width="113" height="22.5"/>
+                        <rect key="frame" x="254" y="13.5" width="106" height="23"/>
                         <fontDescription key="fontDescription" name="GlacialIndifference-Regular" family="Glacial Indifference" pointSize="19"/>
                         <color key="textColor" name="GoldenThemeColorInverse"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZYN-cI-ApP">
-                        <rect key="frame" x="331" y="11" width="29" height="28"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZYN-cI-ApP">
+                        <rect key="frame" x="325" y="2.5" width="45" height="45"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="29" id="AAA-ak-PKr"/>
-                            <constraint firstAttribute="height" constant="29" id="Cw4-yO-jci"/>
+                            <constraint firstAttribute="width" constant="45" id="AAA-ak-PKr"/>
+                            <constraint firstAttribute="height" constant="45" id="Cw4-yO-jci"/>
                         </constraints>
                         <color key="tintColor" name="GoldenThemeColorInverse"/>
-                        <state key="normal" backgroundImage="ellipsis.circle" catalog="system"/>
+                        <state key="normal" image="ellipsis.circle" catalog="system">
+                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large" weight="medium"/>
+                        </state>
                         <connections>
                             <action selector="specificDetailsPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="aSh-dT-l0I"/>
                         </connections>
@@ -65,8 +67,8 @@
                     <constraint firstItem="4Rx-yJ-h9f" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="FAL-H5-Ghn"/>
                     <constraint firstItem="6iJ-ek-hdR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="K4b-e6-EoB"/>
                     <constraint firstAttribute="trailing" secondItem="4Rx-yJ-h9f" secondAttribute="trailing" constant="20" id="QT4-8X-LjW"/>
-                    <constraint firstItem="ZYN-cI-ApP" firstAttribute="leading" secondItem="WY6-O8-wms" secondAttribute="trailing" constant="10" id="Qtc-oC-qCl"/>
-                    <constraint firstAttribute="trailing" secondItem="ZYN-cI-ApP" secondAttribute="trailing" constant="20" id="W3H-6K-Geh"/>
+                    <constraint firstItem="ZYN-cI-ApP" firstAttribute="leading" secondItem="WY6-O8-wms" secondAttribute="trailing" id="Qtc-oC-qCl"/>
+                    <constraint firstAttribute="trailing" secondItem="ZYN-cI-ApP" secondAttribute="trailing" constant="10" id="W3H-6K-Geh"/>
                     <constraint firstItem="ZYN-cI-ApP" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="cW9-2V-9HF"/>
                     <constraint firstItem="WY6-O8-wms" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="vrO-jo-CFm"/>
                 </constraints>
