--- a/STYLYST FB/Views/My Businesses/AssignStaffTableViewCell.xib
+++ b/STYLYST FB/Views/My Businesses/AssignStaffTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17147" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17120"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18092"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -33,7 +33,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="WY6-O8-wms">
-                        <rect key="frame" x="291" y="17" width="30" height="26.5"/>
+                        <rect key="frame" x="295" y="17" width="30" height="26.5"/>
                         <color key="tintColor" name="GoldenThemeColorInverse"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="IOU-YM-nF5"/>
@@ -46,14 +46,16 @@
                         <color key="textColor" name="GoldenThemeColorInverse"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NU4-9f-qIH">
-                        <rect key="frame" x="331" y="16" width="29" height="28"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NU4-9f-qIH">
+                        <rect key="frame" x="325" y="7.5" width="45" height="45"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="29" id="LJs-I6-dLx"/>
-                            <constraint firstAttribute="height" constant="29" id="kod-mn-mV1"/>
+                            <constraint firstAttribute="width" constant="45" id="LJs-I6-dLx"/>
+                            <constraint firstAttribute="height" constant="45" id="kod-mn-mV1"/>
                         </constraints>
                         <color key="tintColor" name="GoldenThemeColorInverse"/>
-                        <state key="normal" backgroundImage="ellipsis.circle" catalog="system"/>
+                        <state key="normal" image="ellipsis.circle" catalog="system">
+                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large" weight="medium"/>
+                        </state>
                         <connections>
                             <action selector="specificDetailsPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ZTW-5d-Y20"/>
                         </connections>
@@ -65,10 +67,10 @@
                     <constraint firstItem="4Rx-yJ-h9f" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="FAL-H5-Ghn"/>
                     <constraint firstItem="6iJ-ek-hdR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="K4b-e6-EoB"/>
                     <constraint firstAttribute="trailing" secondItem="4Rx-yJ-h9f" secondAttribute="trailing" constant="20" id="QT4-8X-LjW"/>
-                    <constraint firstAttribute="trailing" secondItem="NU4-9f-qIH" secondAttribute="trailing" constant="20" id="VSC-5g-BR5"/>
+                    <constraint firstAttribute="trailing" secondItem="NU4-9f-qIH" secondAttribute="trailing" constant="10" id="VSC-5g-BR5"/>
                     <constraint firstItem="NU4-9f-qIH" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="vN1-rg-Nyw"/>
                     <constraint firstItem="WY6-O8-wms" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="vrO-jo-CFm"/>
-                    <constraint firstItem="NU4-9f-qIH" firstAttribute="leading" secondItem="WY6-O8-wms" secondAttribute="trailing" constant="10" id="ywl-DY-oAA"/>
+                    <constraint firstItem="NU4-9f-qIH" firstAttribute="leading" secondItem="WY6-O8-wms" secondAttribute="trailing" id="ywl-DY-oAA"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
