--- a/STYLYST FB/Views/My Businesses/ServicesTableViewCell.xib
+++ b/STYLYST FB/Views/My Businesses/ServicesTableViewCell.xib
@@ -27,13 +27,13 @@
                 <rect key="frame" x="0.0" y="0.0" width="356" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Haircut" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yUm-aL-p0U">
-                        <rect key="frame" x="15" y="5" width="90" height="34"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Haircut" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yUm-aL-p0U">
+                        <rect key="frame" x="15" y="5" width="95" height="34"/>
                         <fontDescription key="fontDescription" name="GlacialIndifference-Bold" family="Glacial Indifference" pointSize="28"/>
                         <color key="textColor" name="GoldenThemeColorDefault"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="$30.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="voz-li-Rgb">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$30.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="voz-li-Rgb">
                         <rect key="frame" x="267.5" y="7.5" width="73.5" height="29"/>
                         <constraints>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="pNb-fm-Upg"/>
@@ -42,14 +42,14 @@
                         <color key="textColor" name="GoldenThemeColorInverse"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" ambiguous="YES" text="0h 25min" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="18z-Ri-ADX">
-                        <rect key="frame" x="15" y="44" width="91" height="26"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="0h 25min" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="18z-Ri-ADX">
+                        <rect key="frame" x="15" y="44" width="88.5" height="26"/>
                         <fontDescription key="fontDescription" name="GlacialIndifference-Regular" family="Glacial Indifference" pointSize="22"/>
                         <color key="textColor" name="GoldenThemeColorInverse"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="o6C-Fs-uSk">
-                        <rect key="frame" x="110" y="17.5" width="10" height="9"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="o6C-Fs-uSk">
+                        <rect key="frame" x="115" y="17.5" width="10" height="9"/>
                         <color key="tintColor" systemColor="systemGreenColor"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="10" id="E83-tD-TGr"/>
@@ -65,7 +65,7 @@
                     <constraint firstAttribute="trailing" secondItem="voz-li-Rgb" secondAttribute="trailing" constant="15" id="BSc-MV-Ije"/>
                     <constraint firstItem="o6C-Fs-uSk" firstAttribute="leading" secondItem="yUm-aL-p0U" secondAttribute="trailing" constant="5" id="Bpx-8v-CPe"/>
                     <constraint firstItem="18z-Ri-ADX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="ceA-7f-T72"/>
-                    <constraint firstItem="voz-li-Rgb" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="o6C-Fs-uSk" secondAttribute="trailing" constant="10" id="dfT-V3-Ae1"/>
+                    <constraint firstItem="voz-li-Rgb" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="o6C-Fs-uSk" secondAttribute="trailing" constant="5" id="dfT-V3-Ae1"/>
                     <constraint firstAttribute="bottom" secondItem="18z-Ri-ADX" secondAttribute="bottom" constant="10" id="fF4-cH-yqu"/>
                     <constraint firstItem="o6C-Fs-uSk" firstAttribute="centerY" secondItem="yUm-aL-p0U" secondAttribute="centerY" id="uvo-g4-ZRL"/>
                     <constraint firstItem="yUm-aL-p0U" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="wes-ti-b4Z"/>
